refactored source => more consistent naming; updated test file and documentation tests added; improved README/documentation; build system switched: SCons => tup; readability improvements

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Extensions
 *.DS_Store
 *.pyc
 *.pyo
@@ -6,14 +7,12 @@
 *.so
 *.o
 
-.sconsign.dblite
+# Hidden folders
+.tup
 
-.ccom_cache
-.clic_cache
-.cdoc_cache
+# Folders
+bin
+build
 
-.ccom_todo
-.cdoc_toc
-
-test
+# Files
 README.html
